Promote to stage environment

--- a/components/backend-tests-go-kcigwyhz/overlays/stage/deployment-patch.yaml
+++ b/components/backend-tests-go-kcigwyhz/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
+      - image: artifactory-docker-artifactory-jcr2.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/backend-tests-go-kcigwyhz:2496c7c4cfd797c6ebd13f4bb743335c3bca9f8e
         name: container-image  
